--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1",
     "ioredis": "^5.3.2",
     "mongoose": "^7.5.1",
     "redis": "^4.6.8",
