--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "class-validator-mongo-object-id": "^1.3.0",
     "crypto": "^1.0.1",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.1",
