--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "googleapis": "^126.0.1",
     "ioredis": "^5.3.2",
     "mongoose": "^7.5.1",
+    "nodemailer": "^6.9.5",
+    "rand-token": "^1.0.1",
     "redis": "^4.6.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -54,6 +56,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
