--- a/src/environments/.production.env
+++ b/src/environments/.production.env
@@ -1,7 +1,4 @@
-REDIS_PORT=6379
 
-
-GOOGLE_OAUTH2_CLIENT_ID=711130205143-5ttkhmnhrhlrbsa0hrjgtgq4rdnkai45.apps.googleusercontent.com
-GOOGLE_OAUTH2_CLIENT_SECRET=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
-GOOGLE_OAUTH2_REDIRECT_URI=https://developers.google.com/oauthplayground/
-GOOGLE_OAUTH2_REFRESH_TOKEN=1//04JgGCYQgSLy5CgYIARAAGAQSNwF-L9IrzclK1DWfZ7_D2DbkiVW1wiTDbKryghp7qj600MLzjCXPpzM_VgeBO0RkdnMxktPduns
+MONGO_URI=mongodb+srv://MatanGuy:QweQwe123123@cluster0.sifpydc.mongodb.net/momentum-c?directConnection=true
+REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
+REDIS_PORT=611868
