--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,5 +30,5 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-north-1
-      - run: eb create your-environment-name --cname https://momentumc.co.il/backend --region eu-north-1
+      - run: eb create your-environment-name --cname momentumc-backend --region eu-north-1
       - run: eb deploy your-environment-name --region eu-north-1
