add new beantls

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,15 +24,14 @@ jobs:
       - name: Install Dependencies
         run: npm install --force
 
-    
+      - name: Initialize Elastic Beanstalk
+        run: eb init -p node.js -r eu-north-1 momentumc-new-backend
+
       - name: Deploy to Elastic Beanstalk
-        run: |
-          eb create momentumc-backend-env \
-            --cname momentumc-backend \
-            --region eu-north-1 \
-            --verbose
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        
-      - run: eb deploy momentumc-backend-env --region eu-north-1
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
+      - run: eb create momentum-c-backendenv1 --cname momentumc-new-backend --region eu-north-1
+      - run: eb deploy momentum-c-backend-env1 --region eu-north-1
