--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,8 @@ jobs:
       - name: Install Elastic Beanstalk CLI
         run: sudo apt-get install -y python3-pip && sudo pip3 install awsebcli
 
+
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
@@ -23,9 +25,14 @@ jobs:
 
       - name: Install Dependencies
         run: npm install --force
+      
+      - name: Set up AWS credentials
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
       - name: Initialize Elastic Beanstalk
-        run: eb init -p node.js -r eu-north-1 momentumc-new-backend
+        run:  eb init -p node.js -r eu-north-1 momentumc-new-backend --region eu-north-1 --verbose
 
       - name: Deploy to Elastic Beanstalk
         uses: aws-actions/configure-aws-credentials@v2
