--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,8 +31,6 @@ jobs:
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
-      - name: Initialize Elastic Beanstalk
-        run:  eb init -p node.js -r eu-north-1 momentumc-new-backend --region eu-north-1 --verbose
 
       - name: Deploy to Elastic Beanstalk
         uses: aws-actions/configure-aws-credentials@v2
@@ -40,5 +38,4 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-north-1
-      - run: eb create momentum-c-backendenv1 --cname momentumc-new-backend --region eu-north-1
-      - run: eb deploy momentum-c-backend-env1 --region eu-north-1
+      - run: eb deploy Momentum-c-new-backend-env --region eu-north-1
