--- a/src/environments/.production.env
+++ b/src/environments/.production.env
@@ -2,3 +2,5 @@
 MONGO_URI=mongodb+srv://MatanGuy:QweQwe123123@cluster0.sifpydc.mongodb.net/momentum-c?directConnection=true
 REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
 REDIS_PORT=611868
+FRONTEND_URI= http://localhost:3000
+FRONTEND_CHECK_URI=http://localhost:3000
