--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "SET NODE_ENV=production && npm run build && npm run start:prod",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:local": "SET NODE_ENV=local&& nest start --watch",
     "start:development": "SET NODE_ENV=development&& nest start --watch",
@@ -16,6 +16,8 @@
     "start:production": "SET NODE_ENV=production&& npm run build && npm run start:prod",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "build:app": "SET NODE_ENV=production && nest build",
+    "start:app": "SET NODE_ENV=production && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
