--- a/src/environments/.production.env
+++ b/src/environments/.production.env
@@ -4,3 +4,4 @@ REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
 REDIS_PORT=611868
 FRONTEND_URI= http://localhost:3000
 FRONTEND_CHECK_URI=http://localhost:3000
+PORT=8080
