--- a/src/environments/.local.env
+++ b/src/environments/.local.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb://127.0.0.1:27017/momentum-c?directConnection=true
 REDIS_URI=127.0.0.1
 REDIS_PORT=6379
 FRONTEND_URI= http://localhost:3000
+REDIS_SOCKET_PASSWORD=
