--- a/src/environments/.production.env
+++ b/src/environments/.production.env
@@ -1,7 +1,8 @@
 
-MONGO_URI=mongodb+srv://MatanGuy:QweQwe123123@cluster0.sifpydc.mongodb.net/momentum-c?directConnection=true
+MONGO_URI=mongodb+srv://matanguy:QweQwe123123@cluster0.sifpydc.mongodb.net/momentum-c?retryWrites=true&w=majority
 REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
-REDIS_PORT=611868
+REDIS_PORT=11868
+REDIS_SOCKET_PASSWORD=hWWtqLbsUiAZjZM6Hq4Ri6bS5j63i6Bx
 FRONTEND_URI= http://localhost:3000
 FRONTEND_CHECK_URI=http://localhost:3000
 PORT=8080
