--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "export NODE_ENV=production && nest build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -16,7 +16,7 @@
     "start:production": "SET NODE_ENV=production&& npm run build && npm run start:prod",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:app": "export NODE_ENV=production && node dist/main",
+    "start:app": "export NODE_ENV=production && npm install --force && npm run build && npm start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
