--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "start:dev": "nest start --watch",
     "start:local": "SET NODE_ENV=local&& nest start --watch",
     "start:development": "SET NODE_ENV=development&& nest start --watch",
-    "start:staging": "SET NODE_ENV=production&& nest start --watch",
-    "start:production": "SET NODE_ENV=production&& npm run build && npm run start:prod",
+    "start:staging": "SET NODE_ENV=production && npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
+    "start:production": "SET NODE_ENV=production&& npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:app": "export NODE_ENV=production && npm install --force && npm run build && npm start:prod",
+    "start:app": "export NODE_ENV=production&& npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
