--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:production": "SET NODE_ENV=production&& npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:app": "export NODE_ENV=production && npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
+    "start:app": "export NODE_ENV=production && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
