--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:staging": "SET NODE_ENV=production && npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
     "start:production": "SET NODE_ENV=production&& npm i -g @nestjs/cli && npm install --force && npm run build && npm run start:prod",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "SET NODE_ENV=production&&node dist/main",
     "start:app": "export NODE_ENV=production && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
