--- a/src/environments/.production.env
+++ b/src/environments/.production.env
@@ -3,6 +3,6 @@ MONGO_URI=mongodb+srv://matanguy:QweQwe123123@cluster0.sifpydc.mongodb.net/momen
 REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
 REDIS_PORT=11868
 REDIS_SOCKET_PASSWORD=hWWtqLbsUiAZjZM6Hq4Ri6bS5j63i6Bx
-FRONTEND_URI=https://d1hn6gqizvvh0v.cloudfront.net/
-FRONTEND_CHECK_URI=https://momentumc.co.il/
+FRONTEND_URI=https://d1hn6gqizvvh0v.cloudfront.net
+FRONTEND_CHECK_URI=https://momentumc.co.il
 PORT=8080
