--- a/src/environments/.local.env
+++ b/src/environments/.local.env
@@ -1,5 +1,6 @@
 PORT=3031
 MONGO_URI=mongodb://127.0.0.1:27017/momentum-c?directConnection=true
-REDIS_URI=127.0.0.1
-REDIS_PORT=6379
+REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
+REDIS_PORT=11868
+REDIS_SOCKET_PASSWORD=hWWtqLbsUiAZjZM6Hq4Ri6bS5j63i6Bx
 FRONTEND_URI=http://localhost:3000
