--- a/src/environments/.local.env
+++ b/src/environments/.local.env
@@ -4,3 +4,4 @@ REDIS_URI=redis-11868.c257.us-east-1-3.ec2.cloud.redislabs.com
 REDIS_PORT=11868
 REDIS_SOCKET_PASSWORD=hWWtqLbsUiAZjZM6Hq4Ri6bS5j63i6Bx
 FRONTEND_URI=http://localhost:3000
+APP_URI=http://ah7wyxm.anonymous.8081.exp.direct
